<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AACActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnfontsmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setFontSmall12sp"
            android:text="@string/font_btn_label_small"
            android:textSize="10sp" />

        <Button
            android:id="@+id/btnfontmedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setFontMedium16sp"
            android:text="@string/font_btn_label_medium"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnfontlarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="setFontLarge20sp"
            android:textSize="16sp"
            android:text="@string/font_btn_label_large" />

        <Button
            android:id="@+id/btnReturnToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:onClick="returnToMain"
            android:text="@string/nav_btn_label_return_to_home" />

        <Button
            android:id="@+id/btnViewSystemPrompt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8sp"
            android:onClick="showSystemPrompt"
            android:text="S" />

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8sp"
            android:background="@drawable/settings_cog"
            android:contentDescription="Settings"
            android:onClick="launchSettings"
            android:scaleX="0.35"
            android:scaleY="1" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="80sp"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        android:scrollbarSize="10dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textviewAAC"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:linksClickable="true"
            android:textIsSelectable="true"
            android:maxLength="10000000"
            android:text="getAACString" />

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>